# uintx

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs  uintx.rs
tests/: test.rs
